Fixed line spacing in report about and bibliography sections

--- a/silico/data/static/css/about.css
+++ b/silico/data/static/css/about.css
@@ -2,6 +2,10 @@
     page-break-before: always;
 }
 
+.section__body--about {
+    line-height: 1.2;
+}
+
 .acknowledgements {
     margin-left: 100px;
     margin-right: 100px;
